--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "firebase": "^5.0.4",
     "vue": "^2.5.16"
   },
@@ -17,8 +18,22 @@
     "@vue/cli-service": "^3.0.0-beta.15",
     "@vue/eslint-config-standard": "^3.0.0-beta.16",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "chromedriver": "^2.43.0",
     "cross-env": "^5.2.0",
-    "vue-template-compiler": "^2.5.16"
+    "flush-promises": "^1.0.0",
+    "geckodriver": "^1.12.2",
+    "jest": "^23.6.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.merge": "^4.6.1",
+    "nightwatch": "^0.9.21",
+    "npm-run-all": "^4.1.3",
+    "selenium-server": "^3.14.0",
+    "supertest": "^3.3.0",
+    "vue-jest": "^2.6.0",
+    "vue-server-renderer": "^2.5.16",
+    "vue-template-compiler": "^2.5.16",
+    "webpack-node-externals": "^1.7.2"
   },
   "eslintConfig": {
     "root": true,
@@ -46,5 +61,27 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      "^.+\\.vue$": "vue-jest"
+    },
+    "setupFiles": [
+      "./test-setup.js"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ]
+  },
+  "babel": {
+    "plugins": [
+      "transform-es2015-modules-commonjs"
+    ]
+  }
 }
